# SimpleAlgorithmJudge

./: README.md  compile_tester.py  judgeserver.vpp  main.html  server_main.py  simplealgorithmjudge.vpp
Client/acm_gui/: BasicSocket.cc  InetSocket.cpp  InetSocket.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  ReadThread.cpp  ReadThread.h  SubmitWidget.cpp  SubmitWidget.h  acm_gui.pro  jsoncpp.cpp  logger.h  loginwidget.cpp  loginwidget.h  loginwindow.cpp  loginwindow.cpp.autosave  loginwindow.h  loginwindow.ui  mainwidget.cpp  mainwidget.h  socketmanager.cpp  socketmanager.cpp.autosave  socketmanager.h
Client/acm_gui (BackUp)/: BasicSocket.cpp  BasicSocket.h  Thread.cpp  Thread.h  acm_gui.pro  client.cpp  client.h  loginwidget.cpp  loginwindow.cpp  loginwindow.h  main.cpp  mainwidget.cpp  messagebox.cpp  messagebox.h  submitwidget.cpp  submitwidget.h
Client/client/: client.pro  loginwidget.cpp  loginwidget.h  loginwindow.cpp  loginwindow.h  mainwidget.cpp  mainwidget.h
JudgeServer/: BasicSocket.cc  BasicSocket.h  CMakeCache.txt  CMakeLists.txt  Compile.cpp  Compile.h  DBConnection.cpp  DBConnection.h  Grading.cpp  Grading.h  InetSocket.cc  InetSocket.cpp  InetSocket.h  Judge.cpp  Judge.h  JudgeManager.cpp  JudgeManager.h  JudgeServer  JudgeServer.cpp  JudgeServer.h  JudgeServer.mk  JudgeServer.project  JudgeServer.workspace  KillTimerTask.cpp  KillTimerTask.h  Makefile  PollManager.cc  PollManager.cpp  PollManager.h  SemaphoreObejct.cpp  SemaphoreObejct.h  ServerSocket.cc  ServerSocket.cpp  ServerSocket.h  Task.cpp  Task.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  (+19 more)
JudgeServer/.codelite/: JudgeServer.session  JudgeServer.workspace.micky
JudgeServer/Debug/: BasicSocket.cc.o.d  PollManager.cc.o.d  ServerSocket.cc.o.d  main.cc.o.d
JudgeServer/include/mongo/: version.h
python/: server_main.py  simplealgorithmjudge.vpp.working  simplealgorithmjudge.vpp.working2  simplealgorithmjudge.vpp~1  simplealgorithmjudge.vpp~2
python/temp/: test_139747546588992  test_139837097187136  test_139837097187136.cc
temp/: test_139744855357248.cc
